@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(Zangband, 2.7.5pre1, bugs@zangband.org)
+AC_INIT(Zangband, 2.7.6, jj@jjnoo.com)
 AC_CONFIG_SRCDIR([src/angband.h])
 AC_CONFIG_HEADER([src/autoconf.h])
 
