@@ -1,0 +1,4 @@
+msgf("Hello");
+message_flush();
+
+/*[JJ]*/
