@@ -53,7 +53,7 @@
 
 # Version stamp (required)
 
-V:2.7.5
+V:2.7.6
 
 
 ### Body Armor ###
