@@ -38,8 +38,7 @@
 
 
 # Version stamp (required)
-
-V:2.7.5
+V:2.7.6
 
 
 # 0x00 --> nothing
