@@ -10,8 +10,7 @@
 
 
 # Version stamp (required)
-
-V:2.7.5
+V:2.7.6
 
 # Maximum number of feature types
 M:F:160
