@@ -156,7 +156,7 @@
 
 # Version stamp (required)
 
-V:2.7.5
+V:2.7.6
 
 ##### The Player #####
 
