@@ -37,11 +37,11 @@
 /* User-visible version */
 #define VER_MAJOR 2
 #define VER_MINOR 7
-#define VER_PATCH 5
+#define VER_PATCH 6
 #define VER_EXTRA 0
 
 /* Versions after release */
-#define VER_AFTER "pre1"
+#define VER_AFTER ""
 
 /* Stringify argument */
 #define Z_STR(a) Z_STR1(a)
@@ -4711,24 +4711,25 @@ extern int PlayerUID;
  *
  * The "(R,G,B)" codes are given in "fourths" of the "maximal" value,
  * and should "gamma corrected" on most (non-Macintosh) machines.
+ *
+ * [JJ] - What is up with the colours here?
  */
-#define TERM_DARK                0  /* 'd' */	/* 0,0,0 */
-#define TERM_WHITE               1  /* 'w' */	/* 4,4,4 */
-#define TERM_SLATE               2  /* 's' */	/* 2,2,2 */
-#define TERM_ORANGE              3  /* 'o' */	/* 4,2,0 */
-#define TERM_RED                 4  /* 'r' */	/* 3,0,0 */
-#define TERM_GREEN               5  /* 'g' */	/* 0,2,1 */
-#define TERM_BLUE                6  /* 'b' */	/* 0,0,4 */
-#define TERM_UMBER               7  /* 'u' */	/* 2,1,0 */
-#define TERM_L_DARK              8  /* 'D' */	/* 1,1,1 */
-#define TERM_L_WHITE             9  /* 'W' */	/* 3,3,3 */
-#define TERM_VIOLET             10  /* 'v' */	/* 4,0,4 */
-#define TERM_YELLOW             11  /* 'y' */	/* 4,4,0 */
-#define TERM_L_RED              12  /* 'R' */	/* 4,0,0 */
-#define TERM_L_GREEN            13  /* 'G' */	/* 0,4,0 */
-#define TERM_L_BLUE             14  /* 'B' */	/* 0,4,4 */
-#define TERM_L_UMBER            15  /* 'U' */	/* 3,2,1 */
-
+#define TERM_DARK               0  /* 'd' */	/* 0,0,0 */
+#define TERM_RED				1  /* 'w' */	/* 4,4,4 */
+#define TERM_GREEN				2  /* 's' */	/* 2,2,2 */
+#define TERM_UMBER				3  /* 'o' */	/* 4,2,0 */
+#define TERM_BLUE				4  /* 'r' */	/* 3,0,0 */
+#define TERM_VIOLET				5  /* 'g' */	/* 0,2,1 */
+#define TERM_BLUE				6  /* 'b' */	/* 0,0,4 */
+#define TERM_WHITE				7  /* 'u' */	/* 2,1,0 */
+#define TERM_L_DARK				8  /* 'D' */	/* 1,1,1 */
+#define TERM_L_RED				9  /* 'W' */	/* 3,3,3 */
+#define TERM_L_GREEN			10  /* 'v' */	/* 4,0,4 */
+#define TERM_L_UMBER			11  /* 'y' */	/* 4,4,0 */
+#define TERM_L_BLUE				12  /* 'R' */	/* 4,0,0 */
+#define TERM_ORANGE 			13  /* 'G' */	/* 0,4,0 */
+#define TERM_SLATE				14  /* 'B' */	/* 0,4,4 */
+#define TERM_L_WHITE			15  /* 'U' */	/* 3,2,1 */
 
 /*
  * Colour format specifiers in strings
